gtk-3.0/gtk.css
/* ... */
	scale.fine-tune marks.bottom {
		margin-top: 8px;
		margin-bottom: -13px; }
	scale.fine-tune marks.top {
		margin-right: 8px;
		margin-left: -13px; }
	scale.fine-tune marks.bottom {
		margin-left: 8px;
		margin-right: -13px; }
	scale slider {
		min-height: 13px;
		min-width: 30px;
		margin: 0;
		border-radius: 0;
		color: @black;
		background-color: @neutral01;
		border: 1px solid @neutral02;
		border-top-color: @border01-light;
		border-left-color: @border01-lightless;
		background-image: linear-gradient(to right, @neutral02, @border01);
		background-size: 2px 100%;
		background-position: center center;
		background-repeat: no-repeat; }
		scale slider:disabled {
			-gtk-icon-shadow: none;
			background-color: @darkgray-a5a9b9; }
			scale slider:disabled:backdrop {
				-gtk-icon-shadow: none;
				background-color: @darkgray-a5a9b9; }
		scale slider:backdrop {
			color: @accent01-contrast;
			background-color: @neutral01; }
	scale.vertical slider {
		min-height: 30px;
		min-width: 15px;
		margin: 0;
		background-size: 100% 2px;
		background-image: linear-gradient(to bottom, @neutral02, @border01); }
	scale value {
		color: alpha(currentColor, 0.35); }
	scale marks {
		color: alpha(currentColor, 0.35); }
		scale marks mark {
			box-shadow: 1px 1px @border01; }
		scale marks.top {
			margin-bottom: 6px;
			margin-top: -12px; }
		scale marks.bottom {
			margin-top: 6px;
			margin-bottom: -12px; }
		scale marks.top {
			margin-right: 6px;
			margin-left: -12px; }
		scale marks.bottom {
			margin-left: 6px;
			margin-right: -12px; }

scrolledwindow {
	border: 1px solid @neutral02;
	border-bottom-color: @border01-dark;
	border-right-color: @border01-darkless; }

/* CBT: scrolling */
scrollbar {
	zborder-bottom-color: @border01-dark;
	zborder-right-color: @border01-darkless;
	background-color: @neutral04;
	zborder: 2px solid @theme18;
	zbackground-color: @theme18;}
	/* CBT: The background of the entire scrollbar */
	scrollbar trough {
		zborder: 3px solid @FINDME;
		border-radius: 0; 
		zbackground-image: url("assets/thatch02.png");}
	scrollbar.horizontal trough {
		background-image: url("assets/thatch16.png");}
	scrollbar.vertical trough {
		background-image: url("assets/thatch16.png");}
	scrollbar button,
	scrollbar button:backdrop, 
	scrollbar button:active, 
	scrollbar button:active:backdrop, 
	scrollbar button:disabled, 
	scrollbar button:disabled:backdrop {
		border: none;
		box-shadow: none;
		color: transparent;
		padding: 5; /* CBT: somewhat resizes but creates H/V overalp */
		background-color: transparent;
		background-size: auto;
		background-position: center center;
		background-repeat: no-repeat; 
		zborder: 2px solid cyan;}
	scrollbar.overlay-indicator {
		opacity: 1; /* CBT: change to make entire scrollbar semi-opaque */ }

	/* CBT: Shared between left/right and up/down sliders */
	scrollbar.horizontal slider,
	scrollbar.vertical slider {
		border: 5px double @accent01;
		background-color: @neutral02; /* main color */
		background-clip: padding-box;
		background-image: url("assets/thatch13.png");
	}
	/* CBT: ONLY what is unique to left/right slider */
	scrollbar.horizontal slider {
		padding: 3 40; /* effectively controls overall slider size (?) */
		min-height: 11px;
		min-width: 41px;
		}
	/* CBT: ONLY what is unique to up/down slider */
	scrollbar.vertical slider {
		padding: 40 3; /* effectively controls overall slider size (?) */
		min-height: 11px;
		min-width: 45px;
		}
		scrollbar.horizontal slider,
		scrollbar.vertical slider {
		zborder: 8px solid @FINDME; zbackground: @FINDME2;
		}
	scrollbar.horizontal button,
	scrollbar.vertical button {
		border-width: 4px;
		border-color: @border01-light @border01-darkless @border01-dark @border01-lightless;
		border-style: solid;
		background-color: @accent01;}
		
		scrollbar button:backdrop,
		scrollbar slider:backdrop {
			background-color: @neutral03;
		}

	scrollbar.horizontal button {
		min-height: 11px;
		min-width: 11px;}
		scrollbar.horizontal button.down {
			background-image: url("assets/arrow-right.png"); }
		scrollbar.horizontal button.up {
			background-image: url("assets/arrow-left.png");}
			
	scrollbar.vertical button {
		min-height: 40px;
		min-width: 40px;} 
		scrollbar.vertical button.down {
			background-image: url("assets/arrow-down.png");}
		scrollbar.vertical button.up {
			background-image: url("assets/arrow-up.png");}
			
			
	treeview ~ scrollbar.vertical {
		border-top: 1px solid @neutral02;
		margin-top: -1px; }

separator {
	-gtk-icon-source: none;
	min-width: 1px;
	min-height: 1px;
	background-color: @neutral02;
	box-shadow: 1px 1px @border01; }
	separator:backdrop {
		background-color: @neutral02; }
	button separator {
		margin: 4px 1px; }
	.sidebar view separator, 
	view separator, 
	separator .separator, separator {
		border: none;
		background-color: @neutral02; }
		/* CBT: Pane seperators within windows */
		.sidebar view separator:backdrop, view separator:backdrop, separator .separator:backdrop, separator:backdrop {
			border: none;
			zborder: 4px solid orange; }
	.primary-toolbar separator, 
	toolbar separator {
		background-color: @lightslategray-9196a9; }
		.primary-toolbar separator:backdrop, toolbar separator:backdrop {
			background-color: @neutral02; }
	headerbar separator {
		-GtkWidget-window-dragging: true;
		margin-top: 4px;
		margin-bottom: 4px;
		background-color: @lightslategray-9196a9;
		box-shadow: none; }
		headerbar separator:backdrop {
			background-color: @neutral02; }
	.titlebar separator, 
	.titlebar:not(headerbar) > separator, 
	.titlebar separator.titlebutton, 
	.titlebar:not(headerbar) > separator.titlebutton {
		-GtkWidget-window-dragging: true;
		background-color: @purple02;
		box-shadow: 1px 1px rgba(255, 255, 255, 0.4); }
		.titlebar separator:backdrop, .titlebar:not(headerbar) > separator:backdrop, .titlebar separator.titlebutton:backdrop, .titlebar:not(headerbar) > separator.titlebutton:backdrop {
			background-color: @neutral02; }
/* ... */

